--- a/index.html
+++ b/index.html
@@ -77,15 +77,14 @@
   </div>
 
   <script>
-    // --- 🎲 LISTA DE NÚMEROS ROTATIVOS 🎲 ---
-    // Agrega aquí todos los números que quieras. El sistema elegirá uno al azar en cada clic.
+    // --- 🎲 LISTA DE NÚMEROS ROTATIVOS (CORREGIDO) 🎲 ---
     const WHATSAPP_ROTATOR = [
-      "5492235568815",  // Número 1
-      "5492235867115",  // Número 2 (Cámbialo por el real)
-      "5492235575929"   // Número 3 (Cámbialo por el real)
-      "5492236797994"   // Número 4 (Cámbialo por el real)
-      "5492235177457",  // Número J (Cámbialo por el real)
-      "5492235342762"   // Número R (Cámbialo por el real)
+      "5492235568815", 
+      "5492235867115", 
+      "5492235575929", 
+      "5492236797994", 
+      "5492235177457", 
+      "5492235342762"   
     ];
 
     const SHEET_URL = "https://script.google.com/macros/s/AKfycbw9cPNvu9LoUam2EUVzkTFz8P41-qtjiwHTLEvkh9obDU5D2IcNif1Ep4ZjgMZ7CBBG/exec";
@@ -195,5 +194,3 @@
 
 </body>
 </html>
-
-
