--- a/index.html
+++ b/index.html
@@ -78,13 +78,10 @@
 
   <script>
     // --- 🎲 LISTA DE NÚMEROS ROTATIVOS (CORREGIDO) 🎲 ---
-    const WHATSAPP_ROTATOR = [
-      "5492235568815", 
-      "5492235867115", 
-      "5492235575929", 
-      "5492236797994", 
-      "5492235177457", 
-      "5492235342762"   
+const WHATSAPP_ROTATOR = [
+      "5492235482161",  // Número 1
+      "5492235177457",  // Número 2 (Cámbialo por el real)
+      "5492235342762"   // Número 3 (Cámbialo por el real)
     ];
 
     const SHEET_URL = "https://script.google.com/macros/s/AKfycbw9cPNvu9LoUam2EUVzkTFz8P41-qtjiwHTLEvkh9obDU5D2IcNif1Ep4ZjgMZ7CBBG/exec";
@@ -194,3 +191,4 @@
 
 </body>
 </html>
+
