--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ const WHATSAPP_ROTATOR = [
       const selectedNumber = WHATSAPP_ROTATOR[randomIndex];
 
       // 4. MENSAJE Y APERTURA DE WHATSAPP
-      const message = `Hola! Quiero mi 30% extra. (Cód: ${click_id})`;
+      const message = `Hola! Quiero mi usuario. (Cód: ${click_id})`;
       window.open(`https://wa.me/${selectedNumber}?text=${encodeURIComponent(message)}`, "_blank");
 
       setTimeout(() => {
@@ -192,5 +192,6 @@ const WHATSAPP_ROTATOR = [
 
 </body>
 </html>
+
 
 
