--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
   <script>
     // --- 🎲 LISTA DE NÚMEROS ROTATIVOS (CORREGIDO) 🎲 ---
 const WHATSAPP_ROTATOR = [
+      "5492235568815",  // Número 2 (Cámbialo por el real)
+      "5492235867115",  // Número 2 (Cámbialo por el real)
+      "5492235575929",  // Número 2 (Cámbialo por el real)
       "5492235177457",  // Número 2 (Cámbialo por el real)
       "5492235342762"   // Número 3 (Cámbialo por el real)
     ];
@@ -190,6 +193,7 @@ const WHATSAPP_ROTATOR = [
 
 </body>
 </html>
+
 
 
 
