--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@ const WHATSAPP_ROTATOR = [
       "5492235867115",  // Número 2 Sam
       "5492235575929",  // Número 3 Sam
       "5492235177457",  // Número 1 (Cámbialo por el real)
-      "5492235342762"   // Número 2 (Cámbialo por el real)
+      "5492235342762",  // Número 2 (Cámbialo por el real)
+      "5492236799264"   // Número 3 (Cámbialo por el real)
     ];
 
     const SHEET_URL = "https://script.google.com/macros/s/AKfycbw9cPNvu9LoUam2EUVzkTFz8P41-qtjiwHTLEvkh9obDU5D2IcNif1Ep4ZjgMZ7CBBG/exec";
@@ -193,6 +194,7 @@ const WHATSAPP_ROTATOR = [
 
 </body>
 </html>
+
 
 
 
