--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>💎 Imperio Esmeralda</title>
+  <title>💎 Imperio Zafiro</title>
 
   <meta name="facebook-domain-verification" content="qx1zho2wixswe5pr0ill7z3aecxjcp" />
 
@@ -36,7 +36,7 @@
   <h1 class="logo-text" id="logoContainer" style="visibility: visible;">
     <span class="logo-emoji">💎</span>
     <span class="logo-text-fill" style="color: #00ff88; text-shadow: 0 0 20px rgba(0, 255, 136, 0.5);">
-      IMPERIO ESMERALDA
+      IMPERIO ZAFIRO
     </span>
   </h1>
 
@@ -192,6 +192,7 @@
 
 </body>
 </html>
+
 
 
 
